--- a/.ssh/config
+++ b/.ssh/config
@@ -1,9 +1,13 @@
 ForwardX11=yes
 ControlMaster auto 
-ControlPath /tmp/%r@%h:%p
+ControlPath ~/.ssh/master-%r@%h:%p
 GSSAPIAuthentication no
 GSSAPIKeyExchange no
 AddressFamily inet
+ServerAliveInterval 15
+
+Host aliasname
+    realnameorip
 
 Host insideserver
   ProxyCommand ssh -q outsideserver nc insideserver 22
@@ -11,3 +15,14 @@ Host insideserver
 Host wrongusername
     User rightusername
 
+Host nonestandardport
+    HostName nonstandardporthost
+    Port 3142
+
+Host github.com
+    IdentityFile ~/.ssh/github.key
+
+Host tunnelmysql
+    HostName database.example.com
+    IdentityFile ~/.ssh/mysqltunnel.key
+    LocalForward 9906 127.0.0.1:3306
