--- a/.inputrc
+++ b/.inputrc
@@ -11,6 +11,8 @@ set mark-symlinked-directories on
 # commands (i.e. more intelligent Up/Down behavior)
 "\e[B": history-search-forward
 "\e[A": history-search-backward
+"\C-a": beginning-of-line
+"\C-e": end-of-line
 
 # Do not autocomplete hidden files unless the pattern explicitly begins with a dot
 set match-hidden-files off
@@ -38,3 +40,7 @@ set convert-meta off
 
 # Use Alt/Meta + Delete to delete the preceding word
 "\e[3;3~": kill-word"]]]"
+
+$if Bash
+    Space: magic-space
+$endif
